set(TARGET_NAME OOOGLtarget)

set(CXX_STANDARD_REQUIRED 17)
set(CXX_STANDARD 17)

file(GLOB_RECURSE SOURCES_UNFILTERED *.cpp *.c)
file(GLOB_RECURSE HEADERS_UNFILTERED *.hpp *.h)

string(REGEX REPLACE "${CMAKE_CURRENT_LIST_DIR}/tests/[^;:]+[;:]?" "" SOURCES "${SOURCES_UNFILTERED}")
string(REGEX REPLACE "${CMAKE_CURRENT_LIST_DIR}/tests/[^;:]+[;:]?" "" HEADERS "${HEADERS_UNFILTERED}")

add_library(${TARGET_NAME} STATIC ${SOURCES} ${HEADERS})

if(CMAKE_BUILD_TYPE MATCHES Debug)
  add_definitions("-DOOOGL_CONDITIONAL_CHECKS")
endif()

BuildProperties(${TARGET_NAME})
